<resources>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="developed_by_daly">Developed with ❤️ by Daly</string>
    <string name="tasks">Tasks</string>
    <string name="fb_add_task">Add task</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Description</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="app_name">TaskFlow</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_infos">Infos</string>
    <string name="app_description">dev.daly.com</string>
    <string name="open">Open Menu</string>
    <string name="close">Close menu</string>
    <string name="contact_us">Contact Us</string>
    <string name="support">Support</string>
    <string name="remember_me">Remember me</string>
    <string name="address_ip">Address IP</string>
    <string name="set">Set</string>
    <string name="set_up_ip">Set up the Server IP</string>
    <string name="change_username">Change username</string>
    <string name="delete">Delete account</string>
    <string name="negative_choice">Negative Choice</string>
    <string name="positive_choice">Positive choice</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="github">Github</string>
    <string name="linkedin">LinkedIn</string>
    <string name="icons_by_icons8">Icons by icon8</string>
</resources>