<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navProfile"
                    android:icon="@drawable/profile"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/navSettings"
                    android:icon="@drawable/settings"
                    android:title="@string/menu_settings" />
                <item
                    android:id="@+id/navLogout"
                    android:icon="@drawable/logout"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>

    <item android:title="@string/contact_us">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navContactUs"
                    android:icon="@drawable/support"
                    android:title="@string/support" />
            </group>
        </menu>
    </item>

</menu>