<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ContactUsActivity">

    <TextView
        android:id="@+id/contactUsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactUsTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:paddingStart="20dp"
        android:labelFor="@id/emailEditText"
        android:text="@string/email"
        android:textColor="@color/purple"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTextView"
        android:drawablePadding="20dp"
        android:layout_margin="20dp"
        android:autofillHints="Email"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/purple"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:paddingStart="20dp"
        android:text="@string/message"
        android:textColor="@color/purple"
        android:labelFor="@id/messageEditText"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/messageTextView"
        android:layout_margin="20dp"
        android:autofillHints="Message"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:inputType="text"
        android:gravity="top"
        android:padding="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/messageEditText"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@color/purple"
        android:gravity="center"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/socialMediaLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sendButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/facebookImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/icons8_facebook"
            android:contentDescription="@string/facebook" />

        <ImageView
            android:id="@+id/instagramImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/icons8_instagram"
            android:contentDescription="@string/instagram" />

        <ImageView
            android:id="@+id/githubImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/icons8_github"
            android:contentDescription="@string/github" />

        <ImageView
            android:id="@+id/linkedinImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/icons8_linkedin"
            android:contentDescription="@string/linkedin" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/icons_by_icons8"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:layout_below="@id/socialMediaLinearLayout"
        android:textColor="@color/purple"
        android:layout_centerHorizontal="true"
        android:textSize="12sp" />

</RelativeLayout>