<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ProfileActivity">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/change_username"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/usernameTextView"
        android:autofillHints="task title"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/saveButton"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deleteButton"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/purple"
        android:textSize="16sp"
        android:textStyle="bold"
        />

</RelativeLayout>