<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn"
        android:hint="@string/username"
        android:layout_margin="25dp"
        android:autofillHints="username"
        android:inputType="text"
        android:padding="20dp"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="#30ffffff"
        android:textStyle="bold"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="15dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:hint="@string/password"
        android:background="#30ffffff"
        android:layout_margin="25dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:padding="20dp"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:drawableStart="@drawable/password_white_24dp"
        android:drawablePadding="15dp"
        android:textStyle="bold" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:text="@string/remember_me"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rememberMe"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:padding="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signInBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/design_default_color_primary_variant"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:padding="20dp"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpBtn"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:fontFamily="@font/jetbrainsmono_bold"
        android:text="@string/developed_by_daly"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />



</RelativeLayout>